[gd_scene load_steps=9 format=3 uid="uid://y2mcvu1ulqhc"]

[ext_resource type="Script" path="res://level/mini_map.gd" id="1_7gn6r"]
[ext_resource type="Texture2D" uid="uid://clec6tcb8lmh7" path="res://assets/cam.png" id="2_r4k7g"]
[ext_resource type="Texture2D" uid="uid://c75na0rh42g0s" path="res://assets/blue_dot.png" id="3_qkhaj"]
[ext_resource type="Texture2D" uid="uid://77woe7bbd6bk" path="res://assets/red_dot.png" id="4_s4qvu"]
[ext_resource type="Script" path="res://level/cam_pointer.gd" id="5_qi0m4"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_hqdpq"]
size = Vector2(500, 500)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1hf4k"]
size = Vector2(499, 499)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uqrqy"]
size = Vector2(10, 10)

[node name="MiniMap" type="CanvasLayer"]
script = ExtResource("1_7gn6r")

[node name="MapContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(500, 500)
layout_direction = 1
offset_right = 500.0
offset_bottom = 500.0

[node name="Background" type="Sprite2D" parent="MapContainer"]
modulate = Color(0.380392, 0.380392, 0.380392, 1)
position = Vector2(-1, -1.00001)
texture = SubResource("PlaceholderTexture2D_hqdpq")

[node name="Tank" type="Sprite2D" parent="MapContainer"]
modulate = Color(0, 0.466667, 0.466667, 1)
position = Vector2(-86, 155)
texture = ExtResource("3_qkhaj")

[node name="Cam" type="Sprite2D" parent="MapContainer"]
position = Vector2(116.495, 99.0748)
texture = ExtResource("2_r4k7g")

[node name="BaseFriendly" type="Sprite2D" parent="MapContainer"]
position = Vector2(128, 204)
texture = ExtResource("3_qkhaj")

[node name="BaseEnemy" type="Sprite2D" parent="MapContainer"]
position = Vector2(58, -156)
texture = ExtResource("4_s4qvu")

[node name="Area2D" type="Area2D" parent="MapContainer"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapContainer/Area2D"]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_1hf4k")

[node name="CharacterBody2D" type="CharacterBody2D" parent="MapContainer"]
position = Vector2(-245.793, 228.207)
script = ExtResource("5_qi0m4")

[node name="corner" type="Sprite2D" parent="MapContainer/CharacterBody2D"]
modulate = Color(0, 0.466667, 0.466667, 1)
texture = ExtResource("3_qkhaj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapContainer/CharacterBody2D"]
position = Vector2(-0.207001, -0.207001)
shape = SubResource("RectangleShape2D_uqrqy")

[node name="workers" type="Node2D" parent="MapContainer"]

[connection signal="body_entered" from="MapContainer/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="MapContainer/Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="MapContainer/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="MapContainer/Area2D" to="." method="_on_area_2d_mouse_exited"]
